<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RobotDigger</string>
    <string name="email">robotdigger@163.com</string>
    <string name="smtpserver">smtp.163.com</string>
    <string name="email_password">1011050252</string>
    <string name="menu_settings">Settings</string>
    <string name="account_number">&#160;&#160;账号</string>
    <string name="security_code">&#160;密码</string>
    <string name="login">登录</string>
    <string name="dynamic">主页</string>
    <string name="related">测试</string>
    <string name="criticality_setting">临界设置</string>
    <string name="homepage">文件管理</string>
    <string name="application">更多</string>
    <string name="backup">备份</string>
    <string name="data_setting">数据设置</string>
    <string name="MENU_ABOUT">关于</string>
    <string name="ok_label">确认</string>
    <string name="userName_label">用户名</string>
    <string name="password_lable">密码</string>
    <string name="passwordConfirm_label">确认密码</string>
    <string name="suggust_userName">用户名不能为空</string>
    <string name="suggust_passwordNotEmpty">密码不能为空</string>
    <string name="suggest_passwordNotSame">两次输入的密码不一致</string>
    <string name="suggest_email">邮箱格式不正确</string>
    <string name="loginRegister">注册</string>
    <string name="loginRememberMe">记住我的账号和密码</string>
    <string name="feedback">意见反馈:</string>
    <string name="info">感谢反馈，你的意见是我们前进的最大动力。</string>
    <string name="app_name3">设置</string>
    <string name="submit">开始测试</string>
    <string name="collect">采集频率(秒)：</string>
    <string name="seconds"> 秒</string>
    <string name="color">字体颜色：</string>
    <string name="window"> 是否显示浮窗</string>
    <string name="ok">保存</string>
    <string name="black">返回</string>
    <string name="clearAll">清空</string>
    <string name="MENU_EXIT">退出</string>
    <string name="memoryinfo">内存信息</string>
    <string name="server">服务器地址：</string>
    <string name="use_memory">应用占用内存</string>
    <string name="percentage_memory">应用占用内存比</string>
    <string name="remain_memory">机器剩余内存</string>
    <string name="use_cpu">应用占用CPU率</string>
    <string name="alluse_cpu">CPU总使用率</string>
    <string name="information_flow">流量</string>
    <string name="use_memory_max">应用占用最大内存(MB):</string>
    <string name="use_cpu_max">应用占用最大CPU率(%):</string>
    <string name="alluse_cpu_max">CPU最大总使用率(%):</string>
    <string name="phone">设备信息</string>
    <string name="register">注册</string>
    <string name="email_name">邮箱</string>
    <string name="help">帮助与反馈</string>
    <string name="aboutInfo">		制作人:Mjx\n邮    箱: 938611049@qq.com \n本应用为测试应用,扩展性较高!</string>
    <string name="email_file">尊敬的会员：\n\n  您好！我们很高兴您能使用Robot diggerAndroid应用测试工具。\n  如果您对我们的软件有什么建议，可回复此邮件，我们会尽快更正。感谢您的支持。\n\n温馨提示：\n\n  为保证您能正常收到Robot digger的邮件，请将robotdigger@163.com加入您注册邮箱的邮件地址簿或信任列表。\n\n Copyright 2012-2013 Robot digger.版权所有</string>
    <string name="email_success">邮件已发送，请及时查收</string>
    <string name="email_false">无此用户</string>

</resources>