<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="65.32999dip"
    android:layout_alignParentBottom="true"
    android:background="@drawable/phonetitlebar_bg"
     >

    <LinearLayout
   
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

          <RadioGroup
    		android:id="@+id/main_tab"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">

              <RadioButton
                  android:id="@+id/radio_button0"
                  style="@style/main_tab_bottom"
                  android:layout_marginTop="0.0dip"
                  android:drawableTop="@drawable/icon_1_n"
                  android:text="@string/dynamic" />

    		<RadioButton 
    			android:layout_marginTop="0.0dip"
    			android:text="@string/related"
    			android:drawableTop="@drawable/icon_3_n"
    			android:id="@+id/radio_button1"
    			style="@style/main_tab_bottom"/>

    		<RadioButton 
    			android:layout_marginTop="0.0dip"
    			android:text="@string/homepage"
    			android:drawableTop="@drawable/icon_5_n"
    			android:id="@+id/radio_button2"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="0.0dip"
    			android:text="@string/application"
    			android:drawableTop="@drawable/icon_4_n"
    			android:id="@+id/radio_button3"
    			style="@style/main_tab_bottom"/>
    	</RadioGroup>
    </LinearLayout>
</FrameLayout>